--- a/app/globals.css
+++ b/app/globals.css
@@ -14,8 +14,63 @@
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+html {
+  scroll-behavior: smooth;
+  scroll-snap-type: y mandatory;
 }
+
+section {
+  scroll-snap-align: start;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Arial', sans-serif;
+  background-color: #0e0e0e;
+  color: #ffffff;
+  overflow-x: hidden;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.nav-item {
+  transition: color 0.3s ease;
+}
+
+.nav-item:hover {
+  color: #ff00ff; /* Add a neon accent color */
+}
+
+.flex {
+  padding: 0;
+  margin: 0;
+}
+
+img {
+  margin: 0;
+  padding: 0;
+  border: none;
+  outline: none;
+}
+
+.shadow-none {
+  border: none;
+  outline: none;
+}
+
+.clip-diagonal {
+  clip-path: polygon(0 0, 100% 15%, 100% 85%, 0 100%);
+}
+
+
+.transparent-bg {
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
+}
+
